- Removed instruction_offset as a frame attribute from stacktraces
- [BREAKING] Quotas must now instantiate RateLimited and NotRateLimited return values.
- [BREAKING] Redis quota implementations now return BasicRedisQuota instead of tuples.
- Commits using the ``Fixes SHORTID`` annotation will now be tracked appropriately.
- Added OrganizationReleasesEndpoint

Schema Changes
~~~~~~~~~~~~~~

- Added unique index on ``Release(organization_id, version)``
- Removed unique index on ``Release(project_id, version)``
- Added ``GroupCommitResolution`` model.

Version 8.13
------------

- Added individual filters for legacy browsers to improve customization of error filtering based on browser versions
- Support for setting a custom security header for javascript fetching.
- start using ReleaseProject and Release.organization instead of Release.project
- Project quotas are no longer available, and must now be configured via the organizational rate limits.
- Quotas implementation now requires a tuple of maximum rate and interval window.
- Added security emails for adding and removing MFA and password changes.
- Added the ability to download an apple compatible crash report for cocoa events.
- Add memory and storage information for apple devices
- The legacy API keys feature is now disabled by default.
- Show Images Loaded section for cocoa events with version number.
- Added registers to stacktrace for cocoa exceptions.
- Fixed bug where workflow notification subject may not include a custom email prefix.
- Added configurable subject templates for individual alert emails (`mail:subject_template` option).
- Added data migration to populate ReleaseProject.new_groups
- Added support for managing newsletter subscriptions with Sentry.io

Schema Changes
~~~~~~~~~~~~~~

- Added ``ReleaseProject.new_groups`` column.
- Added ``OrganizationAvatar`` model.

API Changes
~~~~~~~~~~~

- Added avatar and avatarType to ``/organizations/{org}/`` endpoint.