@@ -5,6 +5,7 @@ import {objectIsEmpty, toTitleCase, defined} from '../../utils';
 
 const CONTEXT_TYPES = {
   'default': require('./contexts/default').default,
+  'app': require('./contexts/app').default,
   'device': require('./contexts/device').default,
   'os': require('./contexts/os').default,
   'runtime': require('./contexts/runtime').default,
